# nrf52_thread_sensortag

./: LICENSE  README.md  fp-lib-table  nrf52-sensor-tag-cache.lib  nrf52-sensor-tag.kicad_pcb  nrf52-sensor-tag.kicad_pro  nrf52-sensor-tag.kicad_sch  nrf52-sensor-tag.pro  nrf52-sensor-tag.rules  nrf52-sensor-tag.sch  project.kibot.yaml  sym-lib-table
.github/: kibot.yml
.github/workflows/: kibot.yml
components/BME280/: BME280.kicad_sym  BME280.lib  BME280.step  PSON65P250X250X100-8N.kicad_mod
components/MS88SF2/: MS88SF2.kicad_sym  MS88SF2.lib  MS88SF2.wrl
components/logo/: mig.kicad_mod
enclosure/: trIoT_oberteil_PT2-1mm.stl  trIoT_unterteil_PT2-1mm.stl
firmware/01_dongle_nrfsdk_mqttsn_client/: readme.md
firmware/02_dongle_nrfsdk_mqttsn_sleepy/: main.c
firmware/03_dongle_nrfsdk_mqttsn_sensor/: main.c  ozone_debug.jdebug  sdk_config.h
firmware/05_dongle_pio_zephyr_sensor/: platformio.ini  readme.md
firmware/06_tag_zephyr_hello/: CMakeLists.txt  readme.md
firmware/07_tag_zephyr_button/: readme.md
firmware/08_tag_zephyr_thread/: CMakeLists.txt  prj-log.conf  prj.conf  readme.md
firmware/08_tag_zephyr_thread/src/: main.c
firmware/09_tag_zephyr_i2c/: CMakeLists.txt  prj.conf  readme.md
manufacturing/: ThreadSensorTag_BOM.xlsx  nrf52-sensor-tag-B_Cu.gbr  nrf52-sensor-tag-B_Mask.gbr  nrf52-sensor-tag-B_SilkS.gbr  nrf52-sensor-tag-Edge_Cuts.gbr  nrf52-sensor-tag-F_Cu.gbr  nrf52-sensor-tag-F_Mask.gbr  nrf52-sensor-tag-F_SilkS.gbr  nrf52-sensor-tag-NPTH.drl  nrf52-sensor-tag-PTH.drl  thread-sensor-tag-v1.1.rar  thread-sensor-tag-v1.2.rar
(+138 files in other folders)
